# resid-test

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  testSuite.sh
src/: perfect6581Wrapper.cpp  perfect6581Wrapper.h  residWrapper.cpp  residWrapper.h  residfpWrapper.cpp  residfpWrapper.h  test.cpp  testBench.cpp  testBench.h  testParser.cpp  testParser.h  wrapper.h
src/perfect6581/: netlist_6581.h  netlist_sim.c  netlist_sim.h  perfect6581.c
src/resid/: envelope.cc  envelope.h  wave.cc
tests/: test01  test02  test03  test04  test05  test06  test07  test08  test09  testEnvelope01
